----------------
- Add multiple checkbox fields in ReferralLog.php
- errors if No courses assigned to teacher or No Students were found in GradebookBreakdown.php
- add All Courses & Course-specific comments scales/codes tipmessage in FinalGrades.php & InputFinalGrades.php
- add help for non-core modules in Help.php & Bottom.php
- Remove exit/die/eval in functions, thanks to PHP Mess Detector

Changes in 2.8.3
----------------
- bugfix bug when Back to Student Search in StudentSummary.php
- Bugfix conflict staff_id & student_id vars Moodle plugin in AddUsers.php & AddStudents.php
- Check diagnostic.php link after first login in index.php
- Update french, spanish & german translations

Changes in 2.8.2
----------------
- Bugfix unset modfunc even if no values posted
- adapt height if US Letter paper in HonorRoll.php & HonorRollSubject.php
- Bugfix wkhtmltopdf ContentOperationNotPermittedError in HonorRollSubject.php
- send email from rosariosis@[domain] in NotifyParents.php
- Bugfix add Comments as an exception in Student.php
- Check AllowEdit() before saving in MassAssignFees.php, MassAssignPayments.php, AddUsers.php & AddStudents.php
- Bugfix conflict staff_id & student_id vars in AddUsers.php & AddStudents.php

Changes in 2.8.1
----------------
- Appify / add app to iOS / Android home screen in index.php & apple-touch-icon.png
- Add Select Parents email field facility in CreateParents.php
- Allow students to change their password by default in rosariosis.sql
- Bugfix cannot associate parents & students in AddUsers.php & AddStudents.php

Changes in 2.8
--------------
- Bugfix no payment displayed if no fee in Student_Billing/DailyTransactions.php
- Remove apostrophe + quotes escape in TEXTAREA in CreateParents.php, NotifyParents.php, Transcripts.php
- Create User/Student Account
- Add Registration in Configuration.php
- Move buttons from assets/ to theme folder
- Add HTML5 video ogv + webm formats in PortalNotes.php
- Add PorgramFunctions/README